[Terra-Menu] Fixes focus highlight issue for menu back icon on Safari browser (#1819)

--- a/packages/terra-menu/src/orion-fusion-theme/Menu.module.scss
+++ b/packages/terra-menu/src/orion-fusion-theme/Menu.module.scss
@@ -11,6 +11,7 @@
     --terra-menu-submenu-header-background-color: #f4f4f4;
     --terra-menu-submenu-header-border-bottom: 2px solid #9b9fa1;
     --terra-menu-submenu-header-button-outline-offset: -4px;
+    --terra-menu-back-button-focus-outline: -webkit-focus-ring-color solid 2px;
     --terra-menu-submenu-header-height: auto;
     --terra-menu-submenu-header-title-color: #1c1f21;
     --terra-menu-submenu-header-title-font-size: 1.16667rem;
